added a little bit to the project proposal, will add more

--- a/projectProposal.html
+++ b/projectProposal.html
@@ -30,6 +30,7 @@
     <ol>
         <li>
             Our primary objective with this project is to determine the best stops for a number of artists to have shows at on tour based on data. Using a variety of data we will hopefully be able to find trends that link some areas with more success than others when it comes to an artist’s specific genre or name. We would also like to determine where the artist’s most successful venues or performances were.
+            When we define "best" we will take into account the attendance numbers and revenue for each stop on a tour that an artist has. We will compare the numbers for each location based on other factors including the city population, where the artist is from, and possibly other factors like most popular genre of music in the area and past tour performances.
         </li>
         <li>
             This would hopefully allow for artists to make more informed decisions when they are planning their tour in order to make the most money they can, reach the most fans, and more importantly feel fulfilled during their performances.
@@ -72,9 +73,16 @@
         Data Processing
     </li></h2>
     <ol>
-        <li>We will most likely need to clean up our data since a lot of it will be coming from sources where the data isn't immediately available in easily manipulated formats</li>
-        <li>We hope to get data for a few artists, right now we are thinking anywhere between 5 and 10</li>
-        <li>Data processing will be done mostly in Python, to scrape, analyze and transform the data into easily digestible data. The rest will be done in JavaScript to filter, sort, and map the data to svg elements to create the final visualizations</li>
+        <li>We will most need to clean up our data since a lot of it will be coming from sources where the data isn't immediately available in easily manipulated formats</li>
+        <li>We are going to get the data for recent tours of 5 artists: </li>
+          <ul>
+            <li>Kendrick Lamar - The DAMN. Tour</li>
+            <li>Beyonce - The Formation Tour</li>
+            <li>Drake - Summer Sixteen Tour</li>
+            <li>The Weeknd - Starboy: Legend of the Fall Tour</li>
+            <li>Justin Bieber - Purpose Tour</li>
+          </ul>
+        <li>Data processing will be done mostly in Python, as we created a webscraping program to scrape, analyze and transform the data into easily digestible data. The rest will be done in JavaScript to filter, sort, and map the data to svg elements to create the final visualizations</li>
     </ol>
     <h2><li>
         Visualization Design
