--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
 
 
+<script src="js/topojson.js"></script>
+<script src="js/topojson.v1.min.js"></script>
 <script type="application/javascript" src="js/main.js"></script>
 </body>
 </html>
