Added map to index.html

--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
 </head>
 <body>
 
+<div id="chart-area">
+
+</div>
 
 <script src="js/topojson.js"></script>
 <script src="js/topojson.v1.min.js"></script>
+<script src="js/queue.v1.min.js"></script>
 <script type="application/javascript" src="js/main.js"></script>
 </body>
 </html>
