Added selector to page and center content

--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <script type="text/javascript" src="bower_components/d3-tip/index.js"></script>
 </head>
 <body>
+<div id="selector-div">
+    <select class="selector-select">
+        <option>The Weeknd</option>
+        <option>Beyonce</option>
+        <option>Kendrick Lamar</option>
+        <option>Justin Bieber</option>
+        <option>Drake</option>
+    </select>
+</div>
 
 <div id="chart-area">
 
