Selector and loadData()
Added selector that changes source of data. Made code more modular and flow better.

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
 <div id="selector-div">
-    <select class="selector-select">
-        <option>The Weeknd</option>
-        <option>Beyonce</option>
-        <option>Kendrick Lamar</option>
-        <option>Justin Bieber</option>
-        <option>Drake</option>
+    <select id="selector-select">
+        <option id="weeknd">The Weeknd</option>
+        <option id="beyonce">Beyonce</option>
+        <option id="lamar">Kendrick Lamar</option>
+        <option id="bieber">Justin Bieber</option>
+        <option id="drake">Drake</option>
     </select>
 </div>
 
