Description and Formatting
Added a description and some formatting to the index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <script type="text/javascript" src="bower_components/d3-tip/index.js"></script>
 </head>
 <body>
+<div>
+    <h1>Analytics of Major Domestic Music Tours</h1>
+    <h2>Using data from various artists' tours, the aim is to display which venues/states garner the highest
+        audiences and revenue for each artist, and to uncover underlying factors of audience turnout.
+    </h2>
+</div>
 <div id="selector-div">
     <select id="selector-select">
         <option id="weeknd">The Weeknd</option>
