Switch map format, add hover feature, beganbar chart work

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <h2>Using data from various artists' tours, the aim is to display which venues/states garner the highest
         audiences and revenue for each artist, and to uncover underlying factors of audience turnout.
     </h2>
+<!--    <br>-->
+    <h2>We have a map of the US to help visualize the locations and states, below that we have a few bar charts
+        to show different measurement criteria.
+    </h2>
 </div>
 <div id="selector-div">
     <select id="selector-select">
@@ -24,7 +28,15 @@
     </select>
 </div>
 
+<div id="text-area">
+
+</div>
+
 <div id="chart-area">
+
+</div>
+
+<div id="barchart-area">
 
 </div>
 
