Bar Charts, Tooltips and Hovering

--- a/index.html
+++ b/index.html
@@ -32,11 +32,15 @@
 
 </div>
 
-<div id="chart-area">
+<div id="chart-area" class="chart-div">
 
 </div>
 
-<div id="barchart-area">
+<div id="rev-barchart-area" class="chart-div">
+
+</div>
+
+<div id="att-barchart-area" class="chart-div">
 
 </div>
 
