--- a/index.html
+++ b/index.html
@@ -37,10 +37,12 @@
 </div>
 
 <div id="rev-barchart-area" class="chart-div">
+    <h3>Revenue Across All Performances</h3>
 
 </div>
 
 <div id="att-barchart-area" class="chart-div">
+    <h3>Attendance Across All Performances</h3>
 
 </div>
 
