Highlighted best states

--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 <body>
 <div>
     <h1>Analytics of Major Domestic Music Tours</h1>
+    <br>
     <h2>Using data from various artists' tours, the aim is to display which venues/states garner the highest
         audiences and revenue for each artist, and to uncover underlying factors of audience turnout.
     </h2>
-<!--    <br>-->
+    <br>
     <h2>We have a map of the US to help visualize the locations and states, below that we have a few bar charts
         to show different measurement criteria.
     </h2>
@@ -28,11 +29,11 @@
     </select>
 </div>
 
-<div id="text-area">
-
-</div>
-
 <div id="chart-area" class="chart-div">
+    <h3>Location of Performances with Total Attendance and Revenue by State</h3>
+    <div id="text-area">
+
+    </div>
 
 </div>
 
