--- a/projectProposal.html
+++ b/projectProposal.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Project Proposal</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css" type="text/css">
+    <link rel="stylesheet" href="css/processStyle.css" type="text/css">
 </head>
 <body>
-
+<div class="navbar bg-light navbar-expand-lg container-fluid sticky-top">
+    <a class="navbar navbar-brand" href="index.html">Music Tour Analytics</a>
+    <a class="navbar navbar-item" href="processBook.html">Process Book</a>
+    <a class="navbar navbar-item" href="https://github.com/niktaskar/tour_analytics" target="_blank">Github Page <i class="fas fa-external-link-alt"></i></a>
+</div>
 <ol>
    <h2><li>
         Basic Info
