--- a/processBook.html
+++ b/processBook.html
@@ -16,7 +16,7 @@
 </div>
 <ol>
   <h1>Process Book:</h1>
-  <h3>Music Tours Visualization by Ian Katzman and Nikash Taskar</h3>
+  <p>Music Tours Visualization by Ian Katzman and Nikash Taskar</p>
   <h2><li>
     Overview and Motivation:
   </li></h2>
@@ -44,15 +44,15 @@
     <li>What stops were the most attended for each artist on their tour?</li>
     <li>What stops were the least attended for each artist on their tour?</li>
     <li>What stops made the most money for each artist on their tour?</li>
-    <li>What stops made the least money for each artist on their tour?</li>
-    <h3>We began with the questions above as a baseline, but as we were working we realized we needed to look into data that involved all
-        of the tours we were studying, so we formed some more questions like:</h3>
+    <li>What stops made the least money for each artist on their tour?</li><br>
+    <p>We began with the questions above as a baseline, but as we were working we realized we needed to look into data that involved all
+        of the tours we were studying, so we formed some more questions like:</p>
     <li>What stops were the most attended overall?</li>
     <li>What stops were the least attended overall?</li>
     <li>What stops made the most money overall?</li>
     <li>What stops made the least money overall?</li>
-    <li>Were there any stops made by all artists? Only one artist? What is the crossover like?</li>
-    <h3>We will most likely try to come up with more questions before the final project is due.</h3>
+    <li>Were there any stops made by all artists? Only one artist? What is the crossover like?</li><br>
+    <hp>We will most likely try to come up with more questions before the final project is due.</hp>
   </ul>
   <h2><li>
     Data
@@ -109,6 +109,13 @@
           the tours. Purple designated the highest state in both revenue and attendance, red is for the state with the highest revenue,
           and blue is for the state with the highest attendance.</li>
       <li>We plan on adding more features for the final submit.</li>
+        --------------------------------------------------------------
+        <li>After doing user studies in class, we gained some great insight. We first realized that the color coding on the map was fairly
+            confusing, so we added a legend and also made the data more clear. We also discovered that the two separate bar charts were not
+            necessarily great for readability, so we combined them into a double bar chart that can be sorted by attendance or revenue, or both.
+            We also added a navigation bar at the top the page so that the user can access our process book, and see our github page. Lastly,
+            we added an artist description for each artist when you choose them in the selector, so that the user can have some more context
+            about the tours they are looking at the data for. These changes will be shown below in the implementation section.</li>
     </ul>
   </ul>
   <h2><li>
@@ -118,27 +125,44 @@
     <li>The USA map for a specific artist:
         <br>
         <img style="width: 50%" src="images/mapdisplay.png"/></li>
-    </li>
+    </li><br>
     <li>The USA map for a specific artist when you hover your mouse over a state:
       <br>
       <img style="width: 50%" src="images/mapttdisplay.png"/></li>
-    </li>
+    </li><br>
     <li>The revenue bar chart for a specific artist, which is displayed when an artist is chosen in the selector:
         <br>
         <img style="width: 50%" src="images/revenuedisplay.png"/></li>
-    </li>
+    </li><br>
     <li>The attendance bar chart for a specific artist, which is displayed when an artist is chosen in the selector:
       <br>
       <img style="width: 50%" src="images/attendancedisplay.png"/></li>
-    </li>
+    </li><br>
     <li>The revenue bar chart for a specific artist, when you hover over one of the bars:
       <br>
       <img style="width: 50%" src="images/revenuettdisplay.png"/></li>
-    </li>
+    </li><br>
     <li>The attendance bar chart for a specific artist, when you hover over one of the bars:
       <br>
       <img style="width: 50%" src="images/attendancettdisplay.png"/></li>
-    </li>
+    </li><br>
+      ---------------------------------------------------------------------------------------------------------------
+      <li>This image shows one of the artist descriptions, and the navigation bar we added at the top of the screen:
+          <br>
+          <img style="width: 50%" src="images/artistnav.png"/></li>
+      </li><br>
+      <li>The double bar chart with both attendance and revenue displayed, information on hover:
+          <br>
+          <img style="width: 50%" src="images/combined.png"/></li>
+      </li><br>
+      <li>The double bar chart with only attendance displayed and sorted (also info on hover):
+          <br>
+          <img style="width: 50%" src="images/attendance.png"/></li>
+      </li><br>
+      <li>The double bar chart with only revenue displayed and sorted (also info on hover):
+          <br>
+          <img style="width: 50%" src="images/revenue.png"/></li>
+      </li><br>
   </ul>
   <h2><li>
     Evaluation:
